@@ -1,2 +1,2 @@
-/Dancer-Plugin-Auth-Tiny*
+/Dancer2-Plugin-Auth-Tiny*
 .build
