@@ -1,4 +1,4 @@
-name    = Dancer-Plugin-Auth-Tiny
+name    = Dancer2-Plugin-Auth-Tiny
 author  = David Golden <dagolden@cpan.org>
 license = Apache_2_0
 copyright_holder = David Golden
