@@ -1,10 +1,16 @@
-Revision history for Dancer-Plugin-Auth-Tiny
+Revision history for Dancer2-Plugin-Auth-Tiny
 
 {{$NEXT}}
+
+    [CHANGED]
+
+    - Forked into Dancer2::Plugin::Auth::Tiny for proper Dancer2 support
 
     [DOCUMENTED]
 
     - fixed a typo in an example
+
+***** Prior history refers to Dancer::Plugin::Auth::Tiny *****
 
 0.002     2012-12-20 11:16:59 America/New_York
 
